# chimera_ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/oragen/: README.md  pyproject.toml
examples/oragen/configs/: audio_test.yaml  audio_train.yaml  inference.yaml  multimodal_test.yaml  multimodal_train.yaml
examples/oragen/scripts/: export_inference_checkpoint.py
examples/oragen/src/: __init__.py  chimera_plugin.py  train.py  utils.py
examples/oragen/src/audio/augmentation/: wave_augmentation.py
examples/oragen/src/audio/data/: agender_audio_datamodule.py  agender_audio_dataset.py
examples/oragen/src/audio/models/: audio_models.py  audio_sota_model.py
examples/oragen/src/common/: data_preprocessors.py  grouping_callback.py  losses.py  metrics.py  models.py  utils.py
examples/oragen/src/fusion/augmentation/: modality_augmentation.py
examples/oragen/src/fusion/data/: agender_multimodal_datamodule.py  agender_multimodal_dataset.py  feature_extractors.py
examples/oragen/src/fusion/models/: fusion_models.py
examples/oragen/src/image/augmentation/: image_augmentation.py
examples/oragen/src/image/models/: image_models.py
examples/oragen/src/inference/: extract_features.py  face_detection.py  fusion.py  preprocessing.py  utils.py
examples/va_estimation/: README.md  pyproject.toml
examples/va_estimation/configs/: audio_test.yaml  audio_train.yaml  multimodal_test.yaml  multimodal_train.yaml
examples/va_estimation/src/: __init__.py  chimera_plugin.py  train.py  utils.py
examples/va_estimation/src/audio/callbacks/: audio_framewise_callback.py  audio_unfreeze_backbone_callback.py  audio_windowwise_callback.py
examples/va_estimation/src/audio/data/: audio_va_datamodule.py  audio_va_dataset.py  audio_va_test_datamodule.py  augmentations.py
examples/va_estimation/src/audio/loss/: audio_ccc_mse_loss.py
examples/va_estimation/src/audio/models/: common_models.py  wavlm_s2s_model.py
examples/va_estimation/src/audio/optimizers/: adamw_two_group_optimizer.py
examples/va_estimation/src/audio/schedulers/: named_reduceonplateau_scheduler.py
examples/va_estimation/src/fusion/callbacks/: fusion_framewise_callback.py
examples/va_estimation/src/fusion/data/: fusion_masking_collate.py  fusion_va_datamodule.py  fusion_va_dataset.py
examples/va_estimation/src/fusion/loss/: fusion_ccc_mse_loss.py
examples/va_estimation/src/fusion/models/: fusion_model.py
examples/va_estimation/src/metrics/: va_ccc_metric.py
src/chimera_ml/: __init__.py  cli.py  plugins.py
src/chimera_ml/callbacks/: __init__.py  _utils.py  base.py  checkpoint_callback.py  collect_predictions_callback.py  early_stopping_callback.py  mlflow_predictions_callback.py  plot_confusion_matrix_callback.py  snapshot_callback.py  telegram_notifier_callback.py
src/chimera_ml/core/: __init__.py  batch.py  config.py  registry.py  types.py
src/chimera_ml/data/: __init__.py  datamodule.py  loader_utils.py  masking_collate.py
src/chimera_ml/inference/: __init__.py  builders.py  config.py  context.py  pipeline.py  utils.py
src/chimera_ml/logging/: __init__.py  base.py  console_file_logger.py  (+2 more)
tests/base/: test_base_interfaces.py
tests/callbacks/: test_checkpoint_callback.py  test_collect_predictions_callback.py  test_early_stopping_callback.py  test_plot_confusion_matrix_callback.py  test_snapshot_callback.py  test_telegram_notifier_callback.py
tests/cli/: test_cli.py
tests/core/: test_batch_masks.py  test_registry.py
tests/data/: test_datamodule.py  test_masking_collate.py
tests/inference/: test_checkpoint_steps.py  test_pipeline.py
tests/logging/: test_console_file_logger.py  test_mlflow_logger.py  test_utils.py
tests/losses/: test_losses.py
tests/metrics/: test_metrics.py
tests/models/: test_fusion_models.py
tests/plugins/: test_plugins.py
tests/training/: test_builders.py  test_config.py  test_experiment_config.py  test_loader_utils.py  test_mixed_loader_utils.py  test_non_finite.py  test_optimizers.py  test_schedulers.py  test_trainer_callbacks_metrics_integration.py  test_trainer_datamodule_integration.py  test_trainer_internals.py  test_trainer_loader_modes.py  test_trainer_smoke.py
tests/utils/: test_entrypoints.py  test_seed.py  test_utils_zip_sources.py
tests/visualization/: test_confusion_matrix.py
(+42 files in other folders)
